--- a/app/css/header.css
+++ b/app/css/header.css
@@ -5,15 +5,17 @@ body {
 header {
     display: flex;
     align-items: center;
+    height: 100%;
+    overflow: hidden;
 }
 
 .logo {
     text-align: center;
-    width: 10%;
+    width: 15%;
 }
 
 img {
-    width: 50%;
+    width: 100%;
     height: auto;
 }
 
@@ -23,14 +25,62 @@ img {
 }
 
 a {
-    margin: 0 6rem;
+    margin: 0 1rem;
     color: black;
     text-decoration: underline gray;
-    font-size: 1.2rem;
+    font-size: 1rem;
 }
 
 a:hover {
     font-size: 1.5rem;
     text-decoration: underline;
     text-shadow: 1px 1px 1px #D6EFD8;
+}
+
+/* Estilos para tablets */
+@media (min-width: 768px) {
+    .logo {
+        width: 15%;
+    }
+
+    img {
+        width: 75%
+    }
+
+    a {
+        margin: 0 3rem;
+        font-size: 1.2rem;
+    }
+}
+
+/* Estilos para laptops */
+@media (min-width: 768px) {
+    .logo {
+        width: 15%;
+    }
+
+    img {
+        width: 45%
+    }
+
+    a {
+        margin: 0 3rem;
+        font-size: 1.2rem;
+    }
+}
+
+/* Estilos para Desktop */
+@media (min-width: 1440px) {
+    .logo {
+        width: 10%;
+    }
+
+    img {
+        width: 55%
+    }
+
+    a {
+        margin: 0 6rem;
+        font-size: 1.2rem;
+    }
 }
