--- a/css/header.css
+++ b/css/header.css
@@ -45,7 +45,7 @@ a {
     margin: 0 0.5rem;
     color: white;
     font-size: 0.7rem;
-    font-family: var(--fonte-secundaria);
+    font-family: var(--fonte-principal);
     text-decoration: none;
 }
 
