--- a/css/variaveis.css
+++ b/css/variaveis.css
@@ -5,5 +5,5 @@
     --sombra-verde: #D6EFD8;
 
      /*Fontes*/
-     --fonte-secundaria: "Montserrat", sans-serif;
+     --fonte-principal: "Montserrat", sans-serif;
   }
