--- a/css/variaveis.css
+++ b/css/variaveis.css
@@ -1,7 +1,7 @@
 :root {
     /*Cores*/
     --cor-primaria: #043b22;
-    --hover-botao: #032b1b;
+    --cor-secundaria: #032b1b;
     --sombra-verde: #D6EFD8;
 
      /*Fontes*/
