--- a/css/index.css
+++ b/css/index.css
@@ -27,11 +27,15 @@
 .texto-banner h1 {
     margin: 0;
     font-size: 2rem;
+    font-family: var(--fonte-principal);
 }
 
 .texto-banner p {
     margin: 1vh 0 0;
     font-size: 1rem;
+    line-height: 1.2;
+    font-family: var(--fonte-principal);
+    font-weight: 300;
 }
 
 .cards {
@@ -40,7 +44,6 @@
     align-items: center;
     gap: 20px;
     width: 90%;
-    max-width: 1000px;
     margin: 20px auto;
 }
 
@@ -58,10 +61,10 @@
 .card h2 {
     color: var(--cor-primaria);
     margin-bottom: 15px;
+    font-family: var(--fonte-principal);
 }
 
 .card p {
-    color: #555;
     line-height: 1.6;
     margin-bottom: 20px;
 }
@@ -70,14 +73,16 @@
     width: 100%;
     padding: 10px;
     background-color: var(--cor-primaria);
-    color: #fff;
+    color: white;
     text-decoration: none;
     border-radius: 5px;
     transition: background-color 0.3s;
+    font-family: var(--fonte-principal);
+    font-weight: 400;
 }
 
 .btn:hover {
-    background-color: var(--hover-botao);
+    background-color: var(--cor-secundaria);
 }
 
 /* Estilos para tablets */
@@ -105,6 +110,10 @@
 
 /* Estilos para Desktop e Laptop */
 @media (min-width: 1024px) {
+    .texto-banner {
+        width: 50%;
+    }
+
     .banner {
         height: 85vh;
     }
