--- a/css/produtores.css
+++ b/css/produtores.css
@@ -4,34 +4,122 @@
     font-family: var(--fonte-principal);
     color: var(--cor-primaria);
     margin-left: 10%;
+    margin-bottom: 0px;
+}
+
+.localidade {
+    display: flex;
+    align-items: center;
+    margin-left: 5%;
+    font-size: 1.2rem;
+}
+
+.filtro {
+    font-family: var(--fonte-principal);
+    color: var(--cor-primaria);
+    border-color: var(--cor-secundaria);
+    border-radius: 5px;
+    margin-left: 15px;
+}
+
+.frete {
+    color: gray;
+    font-size: 1rem;
+    margin-left: 10px;
 }
 
 .categoria {
     display: none;
 }
 
-.dropdown {
-    position: relative;
-    display: inline-block;
+.subtitulo {
+    font-family: var(--fonte-principal);
+    color: var(--cor-secundaria);
+    margin-left: 5%;
 }
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
+
+.cards {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    width: 80%;
+    margin: 20px auto;
 }
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
+
+.card {
+    background-color: white;
+    border: 2px solid var(--cor-primaria);
+    border-radius: 10px;
+    box-shadow: 0 4px 8px lightgray;
+    width: 100%;
+    padding: 20px;
+    box-sizing: border-box;
+    text-align: center;
+}
+
+.card h2 {
+    color: var(--cor-primaria);
+    margin-bottom: 15px;
+    font-family: var(--fonte-principal);
+}
+
+.card p {
+    line-height: 1.6;
+    margin-bottom: 20px;
+}
+
+.card ul {
+    padding: 0px;
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+}
+
+.lista {
+    width: 50%;
+    margin-left: 10%;
+}
+
+.lista li {
+    width: 15%
+}
+
+.botao {
+    display: flex;
+    justify-content: end;
+}
+
+.btn {
+    padding: 10px;
+    background-color: var(--cor-primaria);
+    color: #fff;
     text-decoration: none;
-    display: block;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+    font-family: var(--fonte-principal);
+    font-weight: 400;
 }
-.dropdown-content a:hover {background-color: #f1f1f1}
-.dropdown:hover .dropdown-content {
-    display: block;
+
+/* Estilos para tablets */
+@media (min-width: 768px) {
+    .cards {
+        width: 80%;
+    }
+
+    .card {
+        width: 80%;
+    }
 }
-.dropdown:hover .dropbtn {
-    background-color: #3e8e41;
+
+/* Estilos para Desktop e Laptop */
+@media (min-width: 1024px) {
+    .cards {
+        flex-direction: row;
+        justify-content: space-around;
+    }
+
+    .card {
+        width: 45%;
+    }
 }
