--- a/css/cadastro.css
+++ b/css/cadastro.css
@@ -154,6 +154,15 @@
         border-radius: 8px;
         margin-right: 5%;
     }
+
+    .produtor {
+        margin: 1.5rem auto;
+    }
+
+    .texto-produtos {
+        margin: 2rem 0 3rem;
+    }
+    
 }
 
 /* Estilos para Desktop e Laptop */
@@ -184,5 +193,9 @@
         height: auto;
         border-radius: 8px;
         margin-right: 5%;
+    }
+
+    .produtor {
+        margin: 2rem auto;
     }
 }
